2005-08-08 17:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) kick out for 29,207
	* src/gridinsert.c (gridFillRingWithFaces) debug cruff, try for
	opposite node in equator.

2005-08-08 17:18 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridFaceAreaUVDirect) direct way of getting
	face area in uv space, gridFaceAreaUV calls it.

2005-08-08 11:16 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSegmentsContainNode) return node uv if it is in
	segment.

2005-08-06 16:31 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) cleaned out old
	stuff and just use ring for managing faces.

2005-08-06 15:56 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringTriangle) return triangle info.

2005-08-06 15:22 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) fixed the
	repeat of gap0 instead of gap1 in ring init.
	* src/gridinsert.c (gridFillRingWithFaces) return NULL if face not
	in grid.

2005-08-06 14:50 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) default project is le and LeadingEdgeBG active

2005-08-05 16:28 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) initialized
	ring and call gridFillRingWithFaces for test.
	* src/gridinsert.c (gridFillRingWithFaces) get rid of segments by
	inserting triangles. Only a test of current face logic so far.

2005-08-05 15:14 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringSegment) return segment info.

2005-08-05 13:35 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) adds three triangle sides as opposite
	sense segments

2005-08-05 13:18 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddSegment) remove existing segment if it is added
	in opposite direction.

2005-08-05 10:15 Mike Park  <mike.park@nasa.gov>

	* src/ring.c (ringAddTriangle) abort traingle add if base segment does
	not exist

2005-08-05 09:42 Mike Park  <mike.park@nasa.gov>
